# ctf-solver-agent

./: .gitignore  AGENTS.md  DOCKERFILE  README.md  RESOURCES.md  docker-compose.ctfd.yml  docker-compose.yml  ig_ctf_solver.py  pyproject.toml  setup.ps1  setup.sh
.ctf/: config
logs/: 2026-02-17T04-23-47+00-00_ulyssis-bench_XQqd69FiPNuatNuCtCnfKx.eval  2026-02-17T04-24-21+00-00_ulyssis-bench_cyHXFeX7fW6MWhYLJCQUBT.eval  ctfd_2_20260223T211844Z.json  ctfd_2_20260223T221435Z.json  ctfd_2_20260223T222200Z.json  ctfd_2_20260224T005054Z.json  ctfd_3_20260223T221435Z.json  ctfd_3_20260224T005054Z.json  ctfd_4_20260223T221435Z.json  ctfd_4_20260224T005054Z.json  local_IGCTF-21-22_20260223T140248Z.json  local_caesar-salad-jump_20260223T210652Z.json  local_caesar-salad-jump_20260223T210808Z.json  local_caesar-salad-jump_20260223T212441Z.json  local_caesar-salad-jump_20260223T212936Z.json  local_caesar-salad-jump_20260223T213401Z.json  local_caesar-salad-jump_20260223T214017Z.json  local_caesar-salad-jump_20260223T215532Z.json  local_caesar-salad-jump_20260223T232021Z.json  local_caesar-salad-jump_20260224T005126Z.json
src/: challenges.py  config.py  ctfd.py  ctfd_bootstrap.py  data.py  debug_log.py  llm_tiers.py  main.py  solver.py  state.py  trajectory.py
src/agent/: __init__.py  agent.py  poc2_agent.py  poc_agent.py  poc_rag.py  poc_tiered.py  poc_tools.py  react_agent.py
src/benchmarks/: __init__.py  local_bench.py  nyu_ctf_bench.py
src/rag/: README.md  links.yaml  links_rag.py  rag.py
src/sandbox/: DOCKERFILE
src/tests/: inspectai.py
src/tools/: artifacts.py  bash.py  inventory.py  rag.py  templates.py  toolbox.py
src/tools/toolbox/: tool_inventory.yaml
tests/: test_smoke.py
